--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,5 +11,5 @@
         "**/*.json",
         "node_modules/@wdio/sync",
         "node_modules/@wdio/mocha-framework"
-, "test/specs/excampleScripts/demo.js", "test/specs/excampleScripts/Spicejet.js", "test/specs/Hardcodedscripts/Payment4.js", "test/specs/Hardcodedscripts/payment3.js", "test/specs/Hardcodedscripts/payment2.js", "test/specs/Hardcodedscripts/payment1.js"    ]
+, "test/specs/excampleScripts/demo.js", "test/specs/Spicejet.js", "test/specs/Payment4.js", "test/specs/Hardcodedscripts/payment3.js", "test/specs/Hardcodedscripts/payment2.js", "test/specs/Hardcodedscripts/payment1.js"    ]
 }
