--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "wdio-chromedriver-service": "^8.0.0"
     },
     "scripts": {
-        "wdio": "wdio run wdio.conf.js"
+        "wdio": "wdio run wdio.conf.js",
+        "example":"npx wdio run ./wdio.conf.js --spec ValidatingPaymentRecordInHomePage.js"
     },
     "dependencies": {
         "wdio-video-reporter": "^3.2.3",
